--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,4 @@
 include *.rst *.txt
-recursive-include tests *.py
+recursive-include tests *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
